<resources>
    <string name="wifi_security_wapi_psk">WAPI PSK</string>
    <string name="wifi_security_wapi_certificate">WAPI Certificate</string>
    <string name="wifi_fail_to_scan">Can\'t scan for networks</string>
    <string name="wifi_security_none">None</string>
    <string name="wifi_remembered">Saved</string>
    <string name="wifi_disabled_generic">Disabled</string>
    <string name="wifi_disabled_network_failure">IP Configuration Failure</string>
    <string name="wifi_disabled_wifi_failure">WiFi Connection Failure</string>
    <string name="wifi_disabled_password_failure">Authentication problem</string>
    <string name="wifi_not_in_range">Not in range</string>
    <string name="wifi_no_internet">No Internet Access Detected, won\'t automatically reconnect.</string>
    <string name="saved_network">Saved by %1$s</string>
    <string name="connected_via_wfa">Connected via Wi‑Fi assistant</string>
    <string name="connected_via_passpoint">Connected via %1$s</string>
    <string name="available_via_passpoint">Available via %1$s</string>
    <string name="wifi_connected_no_internet">Connected, no Internet</string>
    <string name="bluetooth_disconnected">Disconnected</string>
    <string name="bluetooth_disconnecting">Disconnecting…</string>
    <string name="bluetooth_connecting">Connecting…</string>
    <string name="bluetooth_connected">Connected</string>
    <string name="bluetooth_pairing">Pairing…</string>
    <string name="bluetooth_connected_no_headset">Connected (no phone)</string>
    <string name="bluetooth_connected_no_a2dp">Connected (no media)</string>
    <string name="bluetooth_connected_no_map">Connected (no message access)</string>
    <string name="bluetooth_connected_no_headset_no_a2dp">Connected (no phone or media)</string>
    <string name="bluetooth_profile_a2dp">Media audio</string>
    <string name="bluetooth_profile_headset">Phone audio</string>
    <string name="bluetooth_profile_opp">File transfer</string>
    <string name="bluetooth_profile_hid">Input device</string>
    <string name="bluetooth_profile_pan">Internet access</string>
    <string name="bluetooth_profile_pbap">Contact sharing</string>
    <string name="bluetooth_profile_pbap_summary">Use for contact sharing</string>
    <string name="bluetooth_profile_pan_nap">Internet connection sharing</string>
    <string name="bluetooth_profile_map">Message Access</string>
    <string name="bluetooth_profile_sap">SIM Access</string>
    <string name="bluetooth_a2dp_profile_summary_connected">Connected to media audio</string>
    <string name="bluetooth_headset_profile_summary_connected">Connected to phone audio</string>
    <string name="bluetooth_opp_profile_summary_connected">Connected to file transfer server</string>
    <string name="bluetooth_map_profile_summary_connected">Connected to map</string>
    <string name="bluetooth_sap_profile_summary_connected">Connected to SAP</string>
    <string name="bluetooth_opp_profile_summary_not_connected">Not connected to file transfer server</string>
    <string name="bluetooth_hid_profile_summary_connected">Connected to input device</string>
    <string name="bluetooth_pan_user_profile_summary_connected">Connected to device for Internet access</string>
    <string name="bluetooth_pan_nap_profile_summary_connected">Sharing local Internet connection with device</string>
    <string name="bluetooth_pan_profile_summary_use_for">Use for Internet access</string>
    <string name="bluetooth_map_profile_summary_use_for">Use for map</string>
    <string name="bluetooth_sap_profile_summary_use_for">Use for SIM access</string>
    <string name="bluetooth_a2dp_profile_summary_use_for">Use for media audio</string>
    <string name="bluetooth_headset_profile_summary_use_for">Use for phone audio</string>
    <string name="bluetooth_opp_profile_summary_use_for">Use for file transfer</string>
    <string name="bluetooth_hid_profile_summary_use_for">Use for input</string>
    <string name="bluetooth_pairing_accept">Pair</string>
    <string name="bluetooth_pairing_accept_all_caps">PAIR</string>
    <string name="bluetooth_pairing_decline">Cancel</string>
    <string name="bluetooth_pairing_will_share_phonebook">Pairing grants access to your contacts and call history when connected.</string>
    <string name="bluetooth_pairing_error_message">Couldn\'t pair with %1$s.</string>
    <string name="bluetooth_pairing_pin_error_message">Couldn\'t pair with %1$s because of an incorrect PIN or passkey.</string>
    <string name="bluetooth_pairing_device_down_error_message">Can\'t communicate with %1$s.</string>
    <string name="bluetooth_pairing_rejected_error_message">Pairing rejected by %1$s.</string>
    <string name="accessibility_wifi_off">Wifi off.</string>
    <string name="accessibility_no_wifi">Wifi disconnected.</string>
    <string name="accessibility_wifi_one_bar">Wifi one bar.</string>
    <string name="accessibility_wifi_two_bars">Wifi two bars.</string>
    <string name="accessibility_wifi_three_bars">Wifi three bars.</string>
    <string name="accessibility_wifi_signal_full">Wifi signal full.</string>
    <string name="wifi_security_short_wep">WEP</string>
    <string name="wifi_security_short_wpa">WPA</string>
    <string name="wifi_security_short_wpa2">WPA2</string>
    <string name="wifi_security_short_wpa_wpa2">WPA/WPA2</string>
    <string name="wifi_security_short_psk_generic">@string/wifi_security_short_wpa_wpa2</string>
    <string name="wifi_security_short_eap">802.1x</string>
    <string name="wifi_security_wep">WEP</string>
    <string name="wifi_security_wpa">WPA PSK</string>
    <string name="wifi_security_wpa2">WPA2 PSK</string>
    <string name="wifi_security_wpa_wpa2">WPA/WPA2 PSK</string>
    <string name="wifi_security_psk_generic">@string/wifi_security_wpa_wpa2</string>
    <string name="wifi_security_eap">802.1x EAP</string>
    <string name="wifi_security_passpoint">Passpoint</string>
    <string name="settings_package">com.android.settings</string>
    <string name="certinstaller_package">com.android.certinstaller</string>
    <string name="quick_settings_tiles_extra">hotknot,audioprofile</string>
    <string name="audio_profile">Audio profiles</string>
    <string name="normal">General</string>
    <string name="meeting">Meeting</string>
    <string name="mute">Silent</string>
    <string name="outdoor">Outdoor</string>
    <string name="quick_settings_hotknot_label">HotKnot</string>
    <string name="wfd_sink_summary">Discoverable by others</string>
    <string name="mobile">Data connection</string>
    <string name="data_usage">Data usage</string>
    <string name="quick_settings_data_sim_notset">Data SIM not set</string>
    <string name="accessibility_data_connection_4ga">4G+</string>
    <string name="screen_pinning_description_physical_key">This keeps it in view until you unpin. Touch and hold Back key to unpin.</string>
    <string name="config_statusBarComponent">com.android.systemui.statusbar.phone.PhoneStatusBar</string>
    <string name="quick_settings_tiles_default">wifi,bt,inversion,dnd,cell,airplane,rotation,flashlight,location,cast,hotspot,dataconnection,superscreenshot,screenrecord</string>
    <string name="quick_settings_tiles_default_swm">wifi,bt,inversion,dnd,cell,airplane,rotation,flashlight,location,hotspot,dataconnection,superscreenshot,screenrecord</string>
    <string name="quick_settings_tiles">default</string>
    <string name="velocity_tracker_impl">platform</string>
    <string name="doze_pulse_schedule">1s,10s,30s,60s</string>
    <string name="quick_settings_superscreenshot_label">SuperScreenShot</string>
    <string name="quick_settings_screenrecord_label">ScreenRecord</string>
    <string name="media_projection_dialog_text_custom">%sWhen the screen is off or forced to shake the phone to save the recording and exit the application</string>
    <string name="system_ui_date_pattern">?unknown_ref: 104005b</string>
    <string name="status_bar_date_formatter">%1$s\n%2$s</string>
    <string name="mland">Marshmallow Land</string>
    <string name="app_label">System UI</string>
    <string name="status_bar_clear_all_button">Clear</string>
    <string name="status_bar_recent_remove_item_title">Remove from list</string>
    <string name="status_bar_recent_inspect_item_title">App info</string>
    <string name="status_bar_no_recent_apps">Your recent screens appear here</string>
    <string name="status_bar_accessibility_dismiss_recents">Dismiss recent apps</string>
    <string name="status_bar_no_notifications_title">No notifications</string>
    <string name="status_bar_ongoing_events_title">Ongoing</string>
    <string name="status_bar_latest_events_title">Notifications</string>
    <string name="battery_low_title">Battery is low</string>
    <string name="battery_low_percent_format">%s remaining</string>
    <string name="battery_low_percent_format_saver_started">%s remaining. Battery saver is on.</string>
    <string name="invalid_charger">USB charging not supported.\nUse only the supplied charger.</string>
    <string name="invalid_charger_title">USB charging not supported.</string>
    <string name="invalid_charger_text">Use only the supplied charger.</string>
    <string name="battery_low_why">Settings</string>
    <string name="battery_saver_confirmation_title">Turn on battery saver?</string>
    <string name="battery_saver_confirmation_ok">Turn on</string>
    <string name="battery_saver_start_action">Turn on battery saver</string>
    <string name="status_bar_settings_settings_button">Settings</string>
    <string name="status_bar_settings_wifi_button">Wi-Fi</string>
    <string name="status_bar_settings_auto_rotation">Auto-rotate screen</string>
    <string name="status_bar_settings_mute_label">MUTE</string>
    <string name="status_bar_settings_auto_brightness_label">AUTO</string>
    <string name="status_bar_settings_notifications">Notifications</string>
    <string name="status_bar_network_name_separator">|</string>
    <string name="bluetooth_tethered">Bluetooth tethered</string>
    <string name="status_bar_input_method_settings_configure_input_methods">Set up input methods</string>
    <string name="status_bar_use_physical_keyboard">Physical keyboard</string>
    <string name="usb_device_permission_prompt">Allow the app %1$s to access the USB device?</string>
    <string name="usb_accessory_permission_prompt">Allow the app %1$s to access the USB accessory?</string>
    <string name="usb_device_confirm_prompt">Open %1$s when this USB device is connected?</string>
    <string name="usb_accessory_confirm_prompt">Open %1$s when this USB accessory is connected?</string>
    <string name="usb_accessory_uri_prompt">No installed apps work with this USB accessory. Learn more about this accessory at %1$s</string>
    <string name="title_usb_accessory">USB accessory</string>
    <string name="label_view">View</string>
    <string name="always_use_device">Use by default for this USB device</string>
    <string name="always_use_accessory">Use by default for this USB accessory</string>
    <string name="usb_debugging_title">Allow USB debugging?</string>
    <string name="usb_debugging_message">The computer\'s RSA key fingerprint is:\n%1$s</string>
    <string name="usb_debugging_always">Always allow from this computer</string>
    <string name="usb_debugging_secondary_user_title">USB debugging not allowed</string>
    <string name="accessibility_back">Back</string>
    <string name="accessibility_home">Home</string>
    <string name="accessibility_menu">Menu</string>
    <string name="accessibility_recent">Overview</string>
    <string name="keyguard_accessibility_pin_unlock">Pin unlock.</string>
    <string name="keyguard_accessibility_sim_pin_area">SIM PIN area</string>
    <string name="keyboardview_keycode_delete">Delete</string>
    <string name="keyboardview_keycode_enter">Enter</string>
    <string name="accessibility_ime_switch_button">Switch input method button.</string>
</resources>