<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/com.android.systemui" systemui:orientation="horizontal" systemui:id="@id/profile_switch_dialog_view" systemui:background="@drawable/qs_background_primary" systemui:paddingTop="8dp" systemui:paddingBottom="14dp" systemui:layout_width="UNKNOWN_DATA_0x13001" systemui:layout_height="wrap_content"
    <LinearLayout systemui:orientation="vertical" systemui:id="@id/normal_profile" systemui:layout_width="UNKNOWN_DATA_0x1" systemui:layout_height="wrap_content" systemui:layout_weight="1.0">
        <ImageView systemui:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" systemui:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" systemui:id="@id/normal_profile_icon" systemui:layout_width="wrap_content" systemui:layout_height="wrap_content" systemui:src="@drawable/ic_qs_normal_off" />
        <TextView systemui:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" systemui:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" systemui:id="@id/normal_profile_text" systemui:layout_width="wrap_content" systemui:layout_height="wrap_content" systemui:layout_marginTop="6dp" systemui:text="@string/normal" />
    </LinearLayout>
    <LinearLayout systemui:orientation="vertical" systemui:id="@id/mute_profile" systemui:layout_width="UNKNOWN_DATA_0x1" systemui:layout_height="wrap_content" systemui:layout_weight="1.0">
        <ImageView systemui:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" systemui:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" systemui:id="@id/mute_profile_icon" systemui:layout_width="wrap_content" systemui:layout_height="wrap_content" systemui:src="@drawable/ic_qs_mute_profile_off" />
        <TextView systemui:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" systemui:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" systemui:id="@id/mute_profile_text" systemui:layout_width="wrap_content" systemui:layout_height="wrap_content" systemui:layout_marginTop="6dp" systemui:text="@string/mute" />
    </LinearLayout>
    <LinearLayout systemui:orientation="vertical" systemui:id="@id/meeting_profile" systemui:layout_width="UNKNOWN_DATA_0x1" systemui:layout_height="wrap_content" systemui:layout_weight="1.0">
        <ImageView systemui:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" systemui:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" systemui:id="@id/meeting_profile_icon" systemui:layout_width="wrap_content" systemui:layout_height="wrap_content" systemui:src="@drawable/ic_qs_meeting_profile_off" />
        <TextView systemui:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" systemui:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" systemui:id="@id/meeting_profile_text" systemui:layout_width="wrap_content" systemui:layout_height="wrap_content" systemui:layout_marginTop="6dp" systemui:text="@string/meeting" />
    </LinearLayout>
    <LinearLayout systemui:orientation="vertical" systemui:id="@id/outdoor_profile" systemui:layout_width="UNKNOWN_DATA_0x1" systemui:layout_height="wrap_content" systemui:layout_weight="1.0">
        <ImageView systemui:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" systemui:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" systemui:id="@id/outdoor_profile_icon" systemui:layout_width="wrap_content" systemui:layout_height="wrap_content" systemui:src="@drawable/ic_qs_outdoor_off" />
        <TextView systemui:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" systemui:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" systemui:id="@id/outdoor_profile_text" systemui:layout_width="wrap_content" systemui:layout_height="wrap_content" systemui:layout_marginTop="6dp" systemui:text="@string/outdoor" />
    </LinearLayout>
</LinearLayout>
