<?xml version="1.0" encoding="utf-8"?>
<com.android.systemui.statusbar.phone.NavigationBarView xmlns:android="http://schemas.android.com/apk/res-auto" systemui:background="@drawable/system_bar_background" systemui:layout_width="match_parent" systemui:layout_height="match_parent">
    <FrameLayout systemui:id="@id/rot0" systemui:layout_width="match_parent" systemui:layout_height="match_parent">
        <LinearLayout systemui:orientation="horizontal" systemui:id="@id/nav_buttons" systemui:clipChildren="false" systemui:clipToPadding="false" systemui:layout_width="match_parent" systemui:layout_height="match_parent" systemui:animateLayoutChanges="true">
            <View systemui:visibility="invisible" systemui:layout_width="UNKNOWN_DATA_0x7f0b002c" systemui:layout_height="match_parent" systemui:layout_weight="0.0" />
            <com.android.systemui.statusbar.policy.KeyButtonView systemui:id="@id/back" systemui:layout_width="UNKNOWN_DATA_0x7f0b002a" systemui:layout_height="match_parent" systemui:src="@drawable/ic_sysbar_back" systemui:scaleType="center" systemui:layout_weight="0.0" systemui:contentDescription="@string/accessibility_back" systemui:keyCode="4" />
            <View systemui:visibility="invisible" systemui:layout_width="UNKNOWN_DATA_0x1" systemui:layout_height="match_parent" systemui:layout_weight="1.0" />
            <com.android.systemui.statusbar.policy.KeyButtonView systemui:id="@id/home" systemui:layout_width="UNKNOWN_DATA_0x7f0b002a" systemui:layout_height="match_parent" systemui:src="@drawable/ic_sysbar_home" systemui:scaleType="center" systemui:layout_weight="0.0" systemui:contentDescription="@string/accessibility_home" systemui:keyCode="3" systemui:keyRepeat="false" />
            <View systemui:visibility="invisible" systemui:layout_width="UNKNOWN_DATA_0x1" systemui:layout_height="match_parent" systemui:layout_weight="1.0" />
            <com.android.systemui.statusbar.policy.KeyButtonView systemui:id="@id/recent_apps" systemui:layout_width="UNKNOWN_DATA_0x7f0b002a" systemui:layout_height="match_parent" systemui:src="@drawable/ic_sysbar_recent" systemui:scaleType="center" systemui:layout_weight="0.0" systemui:contentDescription="@string/accessibility_recent" />
            <FrameLayout systemui:layout_width="UNKNOWN_DATA_0x7f0b002c" systemui:layout_height="match_parent" systemui:layout_weight="0.0">
                <com.android.systemui.statusbar.policy.KeyButtonView systemui:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" systemui:id="@id/menu" systemui:visibility="invisible" systemui:layout_width="UNKNOWN_DATA_0x7f0b002b" systemui:layout_height="match_parent" systemui:src="@drawable/ic_sysbar_menu" systemui:scaleType="centerInside" systemui:contentDescription="@string/accessibility_menu" systemui:keyCode="82" />
                <com.android.systemui.statusbar.policy.KeyButtonView systemui:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" systemui:id="@id/ime_switcher" systemui:visibility="invisible" systemui:layout_width="UNKNOWN_DATA_0x7f0b002b" systemui:layout_height="match_parent" systemui:src="@drawable/ic_ime_switcher_default" systemui:scaleType="centerInside" systemui:contentDescription="@string/accessibility_ime_switch_button" />
            </FrameLayout>
        </LinearLayout>
        <LinearLayout systemui:orientation="horizontal" systemui:id="@id/lights_out" systemui:visibility="gone" systemui:layout_width="match_parent" systemui:layout_height="match_parent">
            <ImageView systemui:layout_width="UNKNOWN_DATA_0x7f0b002a" systemui:layout_height="match_parent" systemui:src="@drawable/ic_sysbar_lights_out_dot_small" systemui:scaleType="center" systemui:layout_weight="0.0" systemui:contentDescription="@string/accessibility_back" systemui:layout_marginStart="@dimen/navigation_side_padding" />
            <View systemui:visibility="invisible" systemui:layout_width="match_parent" systemui:layout_height="match_parent" systemui:layout_weight="1.0" />
            <ImageView systemui:layout_width="UNKNOWN_DATA_0x7f0b002a" systemui:layout_height="match_parent" systemui:src="@drawable/ic_sysbar_lights_out_dot_large" systemui:scaleType="center" systemui:layout_weight="0.0" systemui:contentDescription="@string/accessibility_home" />
            <View systemui:visibility="invisible" systemui:layout_width="match_parent" systemui:layout_height="match_parent" systemui:layout_weight="1.0" />
            <ImageView systemui:layout_width="UNKNOWN_DATA_0x7f0b002a" systemui:layout_height="match_parent" systemui:src="@drawable/ic_sysbar_lights_out_dot_small" systemui:scaleType="center" systemui:layout_weight="0.0" systemui:contentDescription="@string/accessibility_recent" systemui:layout_marginEnd="@dimen/navigation_side_padding" />
        </LinearLayout>
        <com.android.systemui.statusbar.policy.DeadZone systemui:layout_gravity="top|bottom|center_vertical|fill_vertical|center|fill" systemui:id="@id/deadzone" systemui:layout_width="match_parent" systemui:layout_height="match_parent" systemui:minSize="@dimen/navigation_bar_deadzone_size" systemui:maxSize="@dimen/navigation_bar_deadzone_size_max" systemui:holdTime="@integer/navigation_bar_deadzone_hold" systemui:decayTime="@integer/navigation_bar_deadzone_decay" systemui:orientation="horizontal" />
    </FrameLayout>
    <FrameLayout systemui:id="@id/rot90" systemui:paddingTop="0dp" systemui:visibility="gone" systemui:layout_width="match_parent" systemui:layout_height="match_parent">
        <LinearLayout systemui:orientation="vertical" systemui:id="@id/nav_buttons" systemui:clipChildren="false" systemui:clipToPadding="false" systemui:layout_width="match_parent" systemui:layout_height="match_parent" systemui:animateLayoutChanges="true">
            <FrameLayout systemui:layout_width="match_parent" systemui:layout_height="UNKNOWN_DATA_0x7f0b002c" systemui:layout_weight="0.0">
                <com.android.systemui.statusbar.policy.KeyButtonView systemui:layout_gravity="top|bottom|center_vertical|fill_vertical|center|fill" systemui:id="@id/ime_switcher" systemui:visibility="invisible" systemui:layout_width="match_parent" systemui:layout_height="UNKNOWN_DATA_0x7f0b002b" systemui:src="@drawable/ic_ime_switcher_default" systemui:scaleType="centerInside" systemui:contentDescription="@string/accessibility_ime_switch_button" />
                <com.android.systemui.statusbar.policy.KeyButtonView systemui:layout_gravity="top|bottom|center_vertical|fill_vertical|center|fill" systemui:id="@id/menu" systemui:visibility="invisible" systemui:layout_width="match_parent" systemui:layout_height="UNKNOWN_DATA_0x2801" systemui:src="@drawable/ic_sysbar_menu_land" systemui:scaleType="centerInside" systemui:contentDescription="@string/accessibility_menu" systemui:keyCode="82" />
            </FrameLayout>
            <com.android.systemui.statusbar.policy.KeyButtonView systemui:id="@id/recent_apps" systemui:layout_width="match_parent" systemui:layout_height="UNKNOWN_DATA_0x7f0b002a" systemui:src="@drawable/ic_sysbar_recent_land" systemui:scaleType="center" systemui:layout_weight="0.0" systemui:contentDescription="@string/accessibility_recent" />
            <View systemui:visibility="invisible" systemui:layout_width="match_parent" systemui:layout_height="match_parent" systemui:layout_weight="1.0" />
            <com.android.systemui.statusbar.policy.KeyButtonView systemui:id="@id/home" systemui:layout_width="match_parent" systemui:layout_height="UNKNOWN_DATA_0x7f0b002a" systemui:src="@drawable/ic_sysbar_home_land" systemui:scaleType="center" systemui:layout_weight="0.0" systemui:contentDescription="@string/accessibility_home" systemui:keyCode="3" systemui:keyRepeat="false" />
            <View systemui:visibility="invisible" systemui:layout_width="match_parent" systemui:layout_height="match_parent" systemui:layout_weight="1.0" />
            <com.android.systemui.statusbar.policy.KeyButtonView systemui:id="@id/back" systemui:layout_width="match_parent" systemui:layout_height="UNKNOWN_DATA_0x7f0b002a" systemui:src="@drawable/ic_sysbar_back_land" systemui:scaleType="center" systemui:layout_weight="0.0" systemui:contentDescription="@string/accessibility_back" systemui:keyCode="4" />
            <View systemui:visibility="invisible" systemui:layout_width="match_parent" systemui:layout_height="UNKNOWN_DATA_0x7f0b002c" systemui:layout_weight="0.0" />
        </LinearLayout>
        <LinearLayout systemui:orientation="vertical" systemui:id="@id/lights_out" systemui:visibility="gone" systemui:layout_width="match_parent" systemui:layout_height="match_parent">
            <ImageView systemui:layout_width="match_parent" systemui:layout_height="UNKNOWN_DATA_0x7f0b002a" systemui:layout_marginTop="@dimen/navigation_side_padding" systemui:src="@drawable/ic_sysbar_lights_out_dot_small" systemui:scaleType="center" systemui:layout_weight="0.0" systemui:contentDescription="@string/accessibility_recent" />
            <View systemui:visibility="invisible" systemui:layout_width="match_parent" systemui:layout_height="match_parent" systemui:layout_weight="1.0" />
            <ImageView systemui:layout_width="match_parent" systemui:layout_height="UNKNOWN_DATA_0x7f0b002a" systemui:src="@drawable/ic_sysbar_lights_out_dot_large" systemui:scaleType="center" systemui:layout_weight="0.0" systemui:contentDescription="@string/accessibility_home" />
            <View systemui:visibility="invisible" systemui:layout_width="match_parent" systemui:layout_height="match_parent" systemui:layout_weight="1.0" />
            <ImageView systemui:layout_width="match_parent" systemui:layout_height="UNKNOWN_DATA_0x7f0b002a" systemui:layout_marginBottom="@dimen/navigation_side_padding" systemui:src="@drawable/ic_sysbar_lights_out_dot_small" systemui:scaleType="center" systemui:layout_weight="0.0" systemui:contentDescription="@string/accessibility_back" />
        </LinearLayout>
        <com.android.systemui.statusbar.policy.DeadZone systemui:layout_gravity="top|bottom|center_vertical|fill_vertical|center|fill" systemui:id="@id/deadzone" systemui:layout_width="match_parent" systemui:layout_height="match_parent" systemui:minSize="@dimen/navigation_bar_deadzone_size" systemui:maxSize="@dimen/navigation_bar_deadzone_size_max" systemui:holdTime="@integer/navigation_bar_deadzone_hold" systemui:decayTime="@integer/navigation_bar_deadzone_decay" systemui:orientation="vertical" />
    </FrameLayout>
</com.android.systemui.statusbar.phone.NavigationBarView>
