<?xml version="1.0" encoding="utf-8"?>
<com.android.keyguard.KeyguardSimPinView xmlns:android="http://schemas.android.com/apk/res-auto" androidprv:gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" androidprv:orientation="vertical" androidprv:id="@id/keyguard_sim_pin_view" androidprv:layout_width="match_parent" androidprv:layout_height="match_parent" androidprv:contentDescription="@string/keyguard_accessibility_pin_unlock" androidprv:layout_maxWidth="@dimen/keyguard_security_width" androidprv:layout_maxHeight="UNKNOWN_DATA_0x7f0b0139">
    <ImageView androidprv:id="@r$id/keyguard_sim" androidprv:layout_width="match_parent" androidprv:layout_height="wrap_content" androidprv:src="@drawable/ic_lockscreen_sim" />
    <include androidprv:layout_width="match_parent" androidprv:layout_height="wrap_content" layout="@layout/keyguard_message_area" />
    <LinearLayout androidprv:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" androidprv:orientation="horizontal" androidprv:id="@r$id/sim_info_message" androidprv:visibility="gone" androidprv:layout_width="wrap_content" androidprv:layout_height="wrap_content">
        <TextView androidprv:textAppearance="?unknown_attr_ref: 1010040" androidprv:textSize="16sp" androidprv:textColor="?unknown_attr_ref: 1010036" androidprv:ellipsize="marquee" androidprv:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" androidprv:id="@r$id/for_text" androidprv:layout_width="wrap_content" androidprv:layout_height="wrap_content" androidprv:singleLine="true" androidprv:textDirection="locale" />
        <ImageView androidprv:id="@r$id/sub_icon" androidprv:paddingTop="4dp" androidprv:paddingRight="8dp" androidprv:layout_width="match_parent" androidprv:layout_height="wrap_content" />
        <TextView androidprv:textAppearance="?unknown_attr_ref: 1010040" androidprv:textSize="16sp" androidprv:textColor="?unknown_attr_ref: 1010036" androidprv:ellipsize="middle" androidprv:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" androidprv:id="@r$id/sim_card_name" androidprv:layout_width="wrap_content" androidprv:layout_height="wrap_content" androidprv:maxWidth="110dp" androidprv:singleLine="true" androidprv:textDirection="locale" />
    </LinearLayout>
    <LinearLayout androidprv:orientation="vertical" androidprv:id="@r$id/keyguard_bouncer_frame" androidprv:layout_width="match_parent" androidprv:layout_height="UNKNOWN_DATA_0x1" androidprv:layout_weight="1.0" androidprv:layoutDirection="ltr">
        <RelativeLayout androidprv:id="@r$id/row0" androidprv:paddingBottom="16dp" androidprv:layout_width="match_parent" androidprv:layout_height="UNKNOWN_DATA_0x1" androidprv:layout_weight="1.0">
            <com.android.keyguard.PasswordTextView androidprv:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" androidprv:id="@r$id/simPinEntry" androidprv:layout_width="UNKNOWN_DATA_0x7f0b0137" androidprv:layout_height="match_parent" androidprv:layout_marginRight="72dp" androidprv:layout_centerHorizontal="true" androidprv:contentDescription="@string/keyguard_accessibility_sim_pin_area" androidprv:scaledTextSize="28" />
            <ImageButton androidprv:gravity="top|bottom|center_vertical|fill_vertical|center|fill" androidprv:id="@r$id/delete_button" androidprv:background="@r$drawable/ripple_drawable" androidprv:paddingLeft="24dp" androidprv:paddingTop="8dp" androidprv:paddingRight="8dp" androidprv:paddingBottom="8dp" androidprv:clickable="true" androidprv:layout_width="wrap_content" androidprv:layout_height="match_parent" androidprv:src="@drawable/ic_backspace_24dp" androidprv:layout_alignParentRight="true" androidprv:contentDescription="@string/keyboardview_keycode_delete" androidprv:layout_alignEnd="@r$id/pinEntry" />
            <View androidprv:id="@r$id/divider" androidprv:background="#28ffffff" androidprv:layout_width="match_parent" androidprv:layout_height="UNKNOWN_DATA_0x101" androidprv:layout_alignParentBottom="true" />
        </RelativeLayout>
        <LinearLayout androidprv:orientation="horizontal" androidprv:layout_width="match_parent" androidprv:layout_height="UNKNOWN_DATA_0x1" androidprv:layout_weight="1.0">
            <com.android.keyguard.NumPadKey androidprv:id="@r$id/key1" androidprv:layout_width="UNKNOWN_DATA_0x0" androidprv:layout_height="match_parent" androidprv:layout_weight="1.0" androidprv:digit="1" androidprv:textView="@r$id/simPinEntry" />
            <com.android.keyguard.NumPadKey androidprv:id="@r$id/key2" androidprv:layout_width="UNKNOWN_DATA_0x0" androidprv:layout_height="match_parent" androidprv:layout_weight="1.0" androidprv:digit="2" androidprv:textView="@r$id/simPinEntry" />
            <com.android.keyguard.NumPadKey androidprv:id="@r$id/key3" androidprv:layout_width="UNKNOWN_DATA_0x0" androidprv:layout_height="match_parent" androidprv:layout_weight="1.0" androidprv:digit="3" androidprv:textView="@r$id/simPinEntry" />
        </LinearLayout>
        <LinearLayout androidprv:orientation="horizontal" androidprv:layout_width="match_parent" androidprv:layout_height="UNKNOWN_DATA_0x1" androidprv:layout_weight="1.0">
            <com.android.keyguard.NumPadKey androidprv:id="@r$id/key4" androidprv:layout_width="UNKNOWN_DATA_0x0" androidprv:layout_height="match_parent" androidprv:layout_weight="1.0" androidprv:digit="4" androidprv:textView="@r$id/simPinEntry" />
            <com.android.keyguard.NumPadKey androidprv:id="@r$id/key5" androidprv:layout_width="UNKNOWN_DATA_0x0" androidprv:layout_height="match_parent" androidprv:layout_weight="1.0" androidprv:digit="5" androidprv:textView="@r$id/simPinEntry" />
            <com.android.keyguard.NumPadKey androidprv:id="@r$id/key6" androidprv:layout_width="UNKNOWN_DATA_0x0" androidprv:layout_height="match_parent" androidprv:layout_weight="1.0" androidprv:digit="6" androidprv:textView="@r$id/simPinEntry" />
        </LinearLayout>
        <LinearLayout androidprv:orientation="horizontal" androidprv:layout_width="match_parent" androidprv:layout_height="UNKNOWN_DATA_0x1" androidprv:layout_weight="1.0">
            <com.android.keyguard.NumPadKey androidprv:id="@r$id/key7" androidprv:layout_width="UNKNOWN_DATA_0x0" androidprv:layout_height="match_parent" androidprv:layout_weight="1.0" androidprv:digit="7" androidprv:textView="@r$id/simPinEntry" />
            <com.android.keyguard.NumPadKey androidprv:id="@r$id/key8" androidprv:layout_width="UNKNOWN_DATA_0x0" androidprv:layout_height="match_parent" androidprv:layout_weight="1.0" androidprv:digit="8" androidprv:textView="@r$id/simPinEntry" />
            <com.android.keyguard.NumPadKey androidprv:id="@r$id/key9" androidprv:layout_width="UNKNOWN_DATA_0x0" androidprv:layout_height="match_parent" androidprv:layout_weight="1.0" androidprv:digit="9" androidprv:textView="@r$id/simPinEntry" />
        </LinearLayout>
        <LinearLayout androidprv:orientation="horizontal" androidprv:layout_width="match_parent" androidprv:layout_height="UNKNOWN_DATA_0x1" androidprv:layout_weight="1.0">
            <Space androidprv:layout_width="UNKNOWN_DATA_0x0" androidprv:layout_height="match_parent" androidprv:layout_weight="1.0" />
            <com.android.keyguard.NumPadKey androidprv:id="@r$id/key0" androidprv:layout_width="UNKNOWN_DATA_0x0" androidprv:layout_height="match_parent" androidprv:layout_weight="1.0" androidprv:digit="0" androidprv:textView="@r$id/simPinEntry" />
            <ImageButton androidprv:id="@r$id/key_enter" androidprv:background="@r$drawable/ripple_drawable" androidprv:paddingBottom="11sp" androidprv:layout_width="UNKNOWN_DATA_0x0" androidprv:layout_height="match_parent" androidprv:src="@drawable/ic_done_wht" androidprv:layout_weight="1.0" androidprv:contentDescription="@string/keyboardview_keycode_enter" />
        </LinearLayout>
    </LinearLayout>
    <include androidprv:gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" androidprv:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" androidprv:orientation="vertical" androidprv:id="@r$id/keyguard_selector_fade_container" androidprv:layout_width="match_parent" androidprv:layout_height="wrap_content" layout="@layout/keyguard_eca" />
</com.android.keyguard.KeyguardSimPinView>
